# Manta

./: .gitignore  CMakeLists.txt  compile.bat
doc/PBR/: PBR_Theory.md
doc/PBR/img/: 2_light_hits_surface.pdn
res/shaders/: frag.spv  shader.vert  vert.spv
res/shaders/basic/: basic.frag  basic.vert  frag.spv  shader.frag  shader.vert  vert.spv
res/shaders/brdfLUT/: brdfLUT.frag  brdfLUT.vert
res/shaders/equi2cube/: equi2cube.frag  equi2cube.vert
res/shaders/irradianceDiffuse/: irradianceDiffuse.frag  irradianceDiffuse.vert
res/shaders/irradianceSpecular/: irradianceSpecular.frag  irradianceSpecular.vert
res/shaders/skybox/: Skybox.frag  Skybox.vert
src/: main.cpp
src/ECS/: ECS.cpp  ECS.hpp
src/ECS/components/: camera.cpp  camera.hpp  model.cpp  model.hpp  skybox.cpp  skybox.hpp  spatial.cpp  spatial.hpp
src/GUI/: imGUIHandler.cpp  imGUIHandler.hpp
src/core/: Manta.cpp  Manta.hpp  settings.cpp  settings.hpp
src/helpers/: RootDir.h.in
src/rendering/: commandBufferManager.cpp  commandBufferManager.hpp  frameManager.cpp  frameManager.hpp  modelLibrary.cpp  modelLibrary.hpp  pipelineManager.cpp  pipelineManager.hpp  rendering.cpp  rendering.hpp  shaderManager.cpp  shaderManager.hpp  swapChainManager.cpp  swapChainManager.hpp  textureLibrary.cpp  textureLibrary.hpp
src/rendering/descriptors/: descriptorAllocator.cpp  descriptorAllocator.hpp  descriptorBuilder.cpp  descriptorBuilder.hpp  descriptorParams.hpp  layoutCache.cpp  layoutCache.hpp
src/rendering/resources/: commandBuffer.cpp  memory.cpp  memory.hpp  model.cpp  model.hpp  shader.cpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
src/rendering/strategy/: SChain.cpp  SChain.hpp  SNode.cpp  SNode.hpp
src/user_input/: user_input.cpp  user_input.hpp
src/util/: VertexShapes.cpp  VertexShapes.hpp  imageData.cpp  imageData.hpp  img_loader.hpp  modelImporter.cpp  modelImporter.hpp  physicalDeviceHelper.cpp  physicalDeviceHelper.hpp  queueFamilies.hpp  time.hpp
src/wrapper/: glm.hpp
